# gromithooks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  install-git-hooks.sh  setup.cfg  techstack.md  techstack.yml
git-hooks/: issue-prepare-commit-msg  tapd-commit-msg  tapd-prepare-commit-msg
git-hooks/multi-hooks/: .gitignore  Makefile  hook-exec  pre-merge-commit  prepare-commit-msg
git-hooks/multi-hooks/customized/: prepare-commit-msg
pre_commit_hooks/: cm_tapd_autoconnect.py  pcm_issue_ref_prefix.py  pcm_tapd_ref_prefix.py
