[metadata]
name = gromit_hooks
version = 1.0.0
description = A pre-commit hooks for git project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DoneSpeak/gromithooks
author = DoneSpeak
author_email = guanrong.yang@foxmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cm-tapd-autoconnect = pre_commit_hooks.cm_tapd_autoconnect:main
    pcm-tapd-ref-prefix = pre_commit_hooks.pcm_tapd_ref_prefix:main
    pcm-issue-ref-prefix = pre_commit_hooks.pcm_issue_ref_prefix:main
